--- a/superstore.ipynb
+++ b/superstore.ipynb
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -405,32 +405,33 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 9994 entries, 0 to 9993\n",
-      "Data columns (total 21 columns):\n",
-      " #   Column         Non-Null Count  Dtype  \n",
-      "---  ------         --------------  -----  \n",
-      " 0   Row ID         9994 non-null   int64  \n",
-      " 1   Order ID       9994 non-null   object \n",
-      " 2   Order Date     9994 non-null   object \n",
-      " 3   Ship Date      9994 non-null   object \n",
-      " 4   Ship Mode      9994 non-null   object \n",
-      " 5   Customer ID    9994 non-null   object \n",
-      " 6   Customer Name  9994 non-null   object \n",
-      " 7   Segment        9994 non-null   object \n",
-      " 8   Country        9994 non-null   object \n",
-      " 9   City           9994 non-null   object \n",
-      " 10  State          9994 non-null   object \n",
-      " 11  Postal Code    9994 non-null   int64  \n",
-      " 12  Region         9994 non-null   object \n",
-      " 13  Product ID     9994 non-null   object \n",
-      " 14  Category       9994 non-null   object \n",
-      " 15  Sub-Category   9994 non-null   object \n",
-      " 16  Product Name   9994 non-null   object \n",
-      " 17  Sales          9994 non-null   float64\n",
-      " 18  Quantity       9994 non-null   int64  \n",
-      " 19  Discount       9994 non-null   float64\n",
-      " 20  Profit         9994 non-null   float64\n",
-      "dtypes: float64(3), int64(3), object(15)\n",
-      "memory usage: 10.4 MB\n"
+      "Data columns (total 22 columns):\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   Row ID         9994 non-null   int64         \n",
+      " 1   Order ID       9994 non-null   object        \n",
+      " 2   Order Date     9994 non-null   datetime64[ns]\n",
+      " 3   Ship Date      9994 non-null   datetime64[ns]\n",
+      " 4   Ship Mode      9994 non-null   object        \n",
+      " 5   Customer ID    9994 non-null   object        \n",
+      " 6   Customer Name  9994 non-null   object        \n",
+      " 7   Segment        9994 non-null   object        \n",
+      " 8   Country        9994 non-null   object        \n",
+      " 9   City           9994 non-null   object        \n",
+      " 10  State          9994 non-null   object        \n",
+      " 11  Postal Code    9994 non-null   int64         \n",
+      " 12  Region         9994 non-null   object        \n",
+      " 13  Product ID     9994 non-null   object        \n",
+      " 14  Category       9994 non-null   object        \n",
+      " 15  Sub-Category   9994 non-null   object        \n",
+      " 16  Product Name   9994 non-null   object        \n",
+      " 17  Sales          9994 non-null   float64       \n",
+      " 18  Quantity       9994 non-null   int64         \n",
+      " 19  Discount       9994 non-null   float64       \n",
+      " 20  Profit         9994 non-null   float64       \n",
+      " 21  Shipping Days  9994 non-null   int64         \n",
+      "dtypes: datetime64[ns](2), float64(3), int64(4), object(13)\n",
+      "memory usage: 9.3 MB\n"
      ]
     }
    ],
@@ -979,6 +980,44 @@
     "\n",
     "#plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sub-Category\n",
+       "Binders        1523\n",
+       "Paper          1370\n",
+       "Furnishings     957\n",
+       "Phones          889\n",
+       "Storage         846\n",
+       "Art             796\n",
+       "Accessories     775\n",
+       "Chairs          617\n",
+       "Appliances      466\n",
+       "Labels          364\n",
+       "Tables          319\n",
+       "Envelopes       254\n",
+       "Bookcases       228\n",
+       "Fasteners       217\n",
+       "Supplies        190\n",
+       "Machines        115\n",
+       "Copiers          68\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Sub-Category'].value_counts()"
    ]
   }
  ],
